# datatalks.club-courses

./: .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
de_zoomcamp/01-docker-terraform/: 04-data-ingestion.ipynb  04-data-ingestion.py
de_zoomcamp/01-docker-terraform/homework/: homework.ipynb  variables.tf
de_zoomcamp/01-docker-terraform/ny_taxi_postgres_data/base/1/: 2619  pg_internal.init
de_zoomcamp/01-docker-terraform/ny_taxi_postgres_data/base/16384/: 1247  1249  1249_fsm  1249_vm  1259  16389  2579  2606  2606_vm  2608  2610  2610_fsm  2610_vm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
de_zoomcamp/01-docker-terraform/ny_taxi_postgres_data/base/5/: 2619  pg_internal.init
de_zoomcamp/01-docker-terraform/ny_taxi_postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
de_zoomcamp/01-docker-terraform/ny_taxi_postgres_data/pg_stat/: pgstat.stat
de_zoomcamp/01-docker-terraform/pipeline/: ingest_data.py  pyproject.toml
de_zoomcamp/02-workflow-orchestration/: homework.md
de_zoomcamp/03-data-warehouse/: DLT_upload_to_GCP.ipynb  fix_null_columns_inplace.py  homework.md  load_yellow_taxi_data.py  original_ny_taxi_data.py  q01.sql  q02.sql  q04.sql  q05.sql  q06.sql  verify_parquets.py  web_to_gcs.py
de_zoomcamp/04-analytics-engineering/: homework.md  pyproject.toml
de_zoomcamp/04-analytics-engineering/taxi_rides_ny/models/staging/: base_raw_fhv_tripdata.sql  schema.yml  sources.yml  stg_fhv_tripdata.sql
de_zoomcamp/05-data-platform/: homework.md
de_zoomcamp/05-data-platform/my-pipeline/pipeline/: pipeline.yml
de_zoomcamp/05-data-platform/my-pipeline/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
de_zoomcamp/05-data-platform/my-pipeline/pipeline/assets/reports/: trips_report.sql
de_zoomcamp/05-data-platform/my-pipeline/pipeline/assets/staging/: trips.sql
de_zoomcamp/06-batch/: docker-compose.yml
de_zoomcamp/06-batch/homework/: homework.ipynb
de_zoomcamp/06-batch/lesson/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  09_spark_gcs.ipynb
de_zoomcamp/07-streaming/: homework.md  job_1h.py  job_session_window.py  job_tumble.py
de_zoomcamp/dlt/: homework.md
de_zoomcamp/dlt/taxi-pipeline/: debug.py  taxi_pipeline_pipeline.py
de_zoomcamp/dlt/taxi-pipeline/.dlt/: config.toml
llm_zoomcamp/01-agentic-rag/: homework.ipynb  pyproject.toml  rag_helper.py
llm_zoomcamp/02-vector-search/: notebook.ipynb  pyproject.toml
llm_zoomcamp/03-orchestration/: docker-compose.yml  homework.md
llm_zoomcamp/03-orchestration/flows/: 1_chat_without_rag.yaml  2_chat_with_rag.yaml  4_simple_agent.yaml
llm_zoomcamp/04-evaluation/: homework.ipynb
llm_zoomcamp/05-monitoring/: homework.ipynb
llm_zoomcamp/workshop/: agent.py  homework.ipynb  homework.md  main.py  pyproject.toml
ml_zoomcamp/01-intro/: car_fuel_efficiency.csv  homework.ipynb  homework.md
ml_zoomcamp/02-regression/: homework.ipynb  lecture.ipynb
ml_zoomcamp/03-classification/: homework.ipynb  lecture.ipynb
ml_zoomcamp/04-evaluation/: homework.ipynb  lesson.ipynb
ml_zoomcamp/05-deployment/: Dockerfile  app.py  homework.ipynb  pyproject.toml  req.py
ml_zoomcamp/06-trees/: homework.ipynb  lesson.ipynb
ml_zoomcamp/08-deep-learning/: homework.ipynb  pytorch.ipynb  tensorflow.ipynb
ml_zoomcamp/09-serverless/: homework.ipynb  lambda_handler.py
ml_zoomcamp/10-kubernetes/: deployment.yaml  homework.ipynb
