[project]
name = "datatalks-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]
