[project]
name = "datatalks-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.1.7",
    "dbt>=1.0.0.40.14",
    "dbt-bigquery>=1.11.0",
    "dbt-core>=1.10.19",
    "dlt[duckdb,workspace]>=1.22.0",
    "google-cloud-storage>=2.4,<3.2",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=22.0.0",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "sympy>=1.14.0",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]

[tool.uv.workspace]
members = [
    "de_zoomcamp/04-analytics-engineering",
]
